--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel", "numpy>=1.20.0", "cython>=0.29.24"]
+requires = ["setuptools", "wheel", "numpy>=1.20.0", "cython>=0.29.24"]
 build-backend = "setuptools.build_meta:__legacy__"
 
 [project]
 name = "confopt"
-version = "1.1.6"
+version = "1.1.8"
 description = "Conformal hyperparameter optimization tool"
 readme = "README.md"
 authors = [
@@ -52,6 +52,8 @@ include-package-data = true
 
 [tool.setuptools.package-data]
 confopt = ["selection/sampling/cy_entropy.pyx"]
+
+
 
 [tool.cibuildwheel]
 # Build only the Python versions we support
@@ -122,6 +124,4 @@ repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
 repair-wheel-command = "delocate-wheel -w {dest_dir} {wheel}"
 
 [tool.cibuildwheel.windows]
-# Windows-specific build configuration
-before-build = "python -m pip install numpy>=1.20.0 cython>=0.29.24 delvewheel"
 repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
