--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta:__legacy__"
 
 [project]
 name = "confopt"
-version = "1.1.8"
+version = "1.1.9"
 description = "Conformal hyperparameter optimization tool"
 readme = "README.md"
 authors = [
@@ -65,11 +65,11 @@ skip = "*-win32 *-musllinux* *-manylinux_i686 *-linux_i686"
 
 # Install NumPy and Cython in the build environment to enable Cython compilation
 before-build = [
-    "pip install numpy>=1.20.0 cython>=0.29.24",
-    "python -c 'import numpy; print(f\"NumPy version: {numpy.__version__}\")'",
-    "python -c 'import Cython; print(f\"Cython version: {Cython.__version__}\")'",
-    "echo 'CONFOPT_FORCE_CYTHON is set to:' $CONFOPT_FORCE_CYTHON",
-    "ls -la confopt/selection/sampling/cy_entropy.*"
+    "pip install numpy>=1.20.0 cython>=0.29.24 delvewheel auditwheel delocate",
+    "python -c \"import numpy; print('NumPy version:', numpy.__version__)\"",
+    "python -c \"import Cython; print('Cython version:', Cython.__version__)\"",
+    "python -c \"import os; print('CONFOPT_FORCE_CYTHON:', os.environ.get('CONFOPT_FORCE_CYTHON', 'not set'))\"",
+    "python -c \"import os; files = [f for f in os.listdir('confopt/selection/sampling') if 'cy_entropy' in f]; print('Cython files:', files)\""
 ]
 
 # Environment variables to ensure Cython compilation
