--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta:__legacy__"
 
 [project]
 name = "confopt"
-version = "1.2.2"
+version = "1.2.4"
 description = "Conformal hyperparameter optimization tool"
 readme = "README.md"
 authors = [
@@ -56,24 +56,13 @@ confopt = ["selection/sampling/cy_entropy.pyx"]
 
 
 [tool.cibuildwheel]
-# Build only the Python versions we support
-build = "cp39-* cp310-* cp311-* cp312-*"
+# Platform-specific build configurations below - no global build to avoid conflicts
 
 # Skip 32-bit builds and musllinux for simplicity (can be enabled later if needed)
 # Also skip i686 due to scikit-learn dependency issues on 32-bit
 skip = "*-win32 *-musllinux* *-manylinux_i686 *-linux_i686"
 
-# Install NumPy and Cython in the build environment to enable Cython compilation
-before-build = [
-    "pip install numpy>=1.20.0 cython>=0.29.24",
-    "python -c \"import numpy; print('NumPy version:', numpy.__version__)\"",
-    "python -c \"import Cython; print('Cython version:', Cython.__version__)\"",
-    "python -c \"import os; print('CONFOPT_FORCE_CYTHON:', os.environ.get('CONFOPT_FORCE_CYTHON', 'not set'))\"",
-    "python -c \"import os; files = [f for f in os.listdir('confopt/selection/sampling') if 'cy_entropy' in f]; print('Cython files:', files)\""
-]
-
-# Environment variables to ensure Cython compilation
-environment = { CONFOPT_FORCE_CYTHON = "1" }
+# All build configurations moved to platform-specific sections below
 
 # Force rebuild from source to ensure our setup.py gets called
 build-verbosity = 1
